--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,10 @@
+<!--
+  Title: index.html
+  Author: Walter McCue
+  Date: 05/14/23
+  Description: html at the root of the application
+-->
+
 <!doctype html>
 <html lang="en">
 <head>
